--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -13,5 +13,8 @@
     "nuxt": "^3.17.5",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^7.0.0-beta.0"
   }
 }
