🚨 Enviroment: restart! Plain PHP Application

--- a/docker/compose.app.yaml
+++ b/docker/compose.app.yaml
@@ -1,6 +1,4 @@
 name: MythosMorph
 include:
-  - ./compose.frontend.yaml
-  - ./compose.backend.yaml
+  - ./compose.php.yaml
   - ./compose.database.yaml
-  - ./compose.reverseproxy.yaml
