--- a/docker/app/dockerfile
+++ b/docker/app/dockerfile
@@ -1,4 +1,7 @@
 FROM php:8.0-apache
+
+RUN a2enmod rewrite
 RUN docker-php-ext-install mysqli
+RUN sed -i 's/AllowOverride None/AllowOverride All/' /etc/apache2/apache2.conf
 
 EXPOSE 	80
